@@ -1,0 +1,20 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> </title>
+    </head>
+    <body>
+        <div id="user-block">
+
+            <p id="name">
+            </p>
+
+            <p id="address">
+            </p>
+
+        </div>
+    </body>
+</html>
+<!--
+vi: expandtab sw=4 ts=4 ft=html:
+-->
